feat: criado funcionalidades de render na dashBoard admin

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
             <div id="divImg">
                 <img id="imgHome" src="/assets/imgs/Rectangle 6.png" alt="">
             </div>
-            <div id="divContent"></div>
+            <div id="divContent">
+                <div>
+                    <select class="mySelectHome" id="">
+                        <option value="">Selecionar Setor</option>
+                    </select>
+                    <ul class="enterprises"></ul>
+                </div>
+            </div>
         </div>
     </main>
     <script type="module" src="/pages/home/index.js"></script>
