--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -26,8 +26,8 @@
                 <h1>Login</h1>
                 <p>Preencha os campos para realizar login</p>
                 <form>
-                    <input type="text" placeholder="Seu e-mail">
-                    <input type="text" placeholder="Sua senha">
+                    <input id="email" type="email" placeholder="Seu e-mail">
+                    <input id="password" type="password" placeholder="Sua senha">
                     <button id="btnLogin" type="submit">Login</button>
                 </form>
                 <div id="divSpan">
@@ -37,6 +37,6 @@
             </div>
         </div>
     </main>
-    <script src="/pages/login/index.js"></script>
+    <script type="module" src="/pages/login/index.js"></script>
 </body>
 </html>
