--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -27,9 +27,9 @@
             <div class="containerContent">
                 <h1>Cadastre-se</h1>
                 <form>
-                    <input type="text" placeholder="Seu nome">
-                    <input type="text" placeholder="Seu e-mail">
-                    <input type="text" placeholder="Sua senha">
+                    <input id="username" type="text" placeholder="Seu nome">
+                    <input id="email" type="email" placeholder="Seu e-mail">
+                    <input id="password" type="password" placeholder="Sua senha">
                     <select>
                         <option value="">Nível profissional</option>
                         <option value="">Estágio</option>
@@ -37,15 +37,15 @@
                         <option value="">Pleno</option>
                         <option value="">Sênior</option>
                     </select>
+                    <button id="register" type="submit">Cadastre-se</button>
                 </form>
                 <div id="divContainerBtns">
-                    <button id="register" type="submit">Cadastre-se</button>
                     <a id="return" href="/index.html">Retornar</a>
                 </div>
             </div>
         </div>
     </main>
-    <script src="/pages/register/index.js"></script>
+    <script type="module" src="/pages/register/index.js"></script>
 </body>
 
 </html>
