add toast,editat usuario Admin e excluir usuario

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/globalStyles.css">
     <link rel="stylesheet" href="/pages/login/index.css">
+    <link rel="stylesheet" href="/styles/toasts.css">
     <title>Login</title>
 </head>
 <body>
@@ -23,8 +24,10 @@
         </header>
         <div id="content">
             <div class="containerContent">
-                <h1>Login</h1>
-                <p>Preencha os campos para realizar login</p>
+                <div class="loginP">
+                    <h1>Login</h1>
+                    <p>Preencha os campos para realizar login</p>
+                </div>
                 <form>
                     <input id="email" type="email" placeholder="Seu e-mail">
                     <input id="password" type="password" placeholder="Sua senha">
