--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/globalStyles.css">
     <link rel="stylesheet" href="/pages/home/index.css">
+    <link rel="stylesheet" href="/styles/toasts.css">
     <title>Kenzie</title>
 </head>
 
