--- a/pages/userPage/index.html
+++ b/pages/userPage/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/globalStyles.css">
     <link rel="stylesheet" href="/pages/userPage/index.css">
     <link rel="stylesheet" href="/styles/modal.css">
+    <link rel="stylesheet" href="/styles/toasts.css">
     <title>User Dashboard</title>
 </head>
 
