fix: alinhamento da pagina

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img id="imgHome" src="/assets/imgs/Rectangle 6.png" alt="">
             </div>
             <div id="divContent">
-                <div>
+                <div id="divHome">
                     <select class="mySelectHome" id="">
                         <option value="">Selecionar Setor</option>
                     </select>
